<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:background="@drawable/round_back_secondary_container"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        app:layout_constraintBottom_toTopOf="@+id/explanation_text"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp">

            <ImageView
                android:id="@+id/parental_lock_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:background="@drawable/round_back_primary"
                android:padding="8dp"
                android:src="@drawable/outline_lock_24"
                app:tint="@color/md_theme_onPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/icon_text_spacing"
                android:layout_toStartOf="@+id/parental_lock"
                android:layout_toEndOf="@id/parental_lock_icon"
                android:text="@string/enable_parental_lock"
                android:textColor="@color/md_theme_onSecondaryContainer"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/parental_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/set_parental_pin_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp">

            <ImageView
                android:id="@+id/set_parental_pin_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerVertical="true"
                android:background="@drawable/round_back_primary"
                android:padding="8dp"
                android:src="@drawable/key_24"
                app:tint="@color/md_theme_onPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/icon_text_spacing"
                android:layout_toStartOf="@+id/set_parental_pin"
                android:layout_toEndOf="@id/set_parental_pin_icon"
                android:text="@string/set_parental_pin"
                android:textColor="@color/md_theme_onSecondaryContainer"
                android:textSize="@dimen/text_size"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/set_parental_pin"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/min_container_size"


                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingHorizontal="5dp"
                android:paddingVertical="6dp"

                app:cornerRadius="9dp"
                android:maxLines="1"
                android:background="@drawable/duration_button_back"

                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:soundEffectsEnabled="true"

                android:text="@string/parental_pin_set"
                android:textColor="@color/md_theme_onSurface"
                android:textSize="@dimen/text_size_small"
                android:textAlignment="center" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/explanation_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:layout_marginHorizontal="8dp"
        android:text="@string/parental_pin_explanation"
        android:textColor="@color/md_theme_onBackground"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>